--- a/templates/userstoriesresult.html
+++ b/templates/userstoriesresult.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <style>
-<<<<<<< HEAD
     .user-stories-result{
         margin-top: 25px;
         padding-top: 15px;
@@ -58,7 +57,7 @@
         {% if total_actor == 1 %}
             {% for list_item in list_activity %}
                 {% for list_act in list_actor %}
-                    <p>i as a {{ list_act }} can "{{ list_item }}"</p>
+                    <p>I as {{ list_act }}, I can "{{ list_item }}"</p>
                 {% endfor %}
             {% endfor %}
         {% endif %}
@@ -67,7 +66,7 @@
             {% with mult|last as last %}
                 {% for Activity in mult %}
                     {% if Activity != last %}
-                        <p>i as a {{ last }} can "{{ Activity }}"</p>
+                        <p>I as {{ last }}, I can "{{ Activity }}"</p>
                     {% endif %}
                 {% endfor %}  
             {% endwith %}   
@@ -98,26 +97,5 @@
       }
     }
     </script>
-=======
-    .Result-container{
-        padding-top: 15px;
-        padding-bottom: 70px;
-        font-family: sans-serif;
-    }
-</style>
-{% extends 'masterpage.html'%}
-{% block content %}
-    <div class="Result-container">
-            <center><h5> LIST OF ACTOR </h5></center>
-        {% for list_act in list_actor %}
-            <center>{{ list_act }}</center>
-        {% endfor %}
-            <center><h5> LIST OF ACTIVITY </h5></center>
-        {% for list_item in list_activity %}
-            <center><p> act : </p></center>
-            <center>{{ list_item }}</center>
-        {% endfor %}
-</div>
->>>>>>> 3496840375ecde488c3fca323c7ce098f1c3e8af
 {% endblock %}
 </html>
